          CHANGES IN SOUNDGEN VERSION 1.8.0.9000 [...date...]
MINOR
  * soundgen(), getSpectralEnvelope(): a more consisent implementation of zero-pole models, which affects manually specified formant amplitudes
  * soundgen(), getSpectralEnvelope(): formantDepStochastic is now treated as a multiplication factor instead of dB (0 = no formant, 1 = default amplitude)

BUGS FIXED:
  * soundgen_app(): correct parsing of long formant lists and other objects


          CHANGES IN SOUNDGEN VERSION 1.8.0 [11-August-2020]
NEW FUNCTIONS:
  * formant_app(): a Shiny web app for manually correcting formant measurements

MAJOR:
  * pitch_app(): a new layout and numerous changes, e.g. caching to speed up the plotting of long files
  * modulationSpectrum(), modulationSpectrumFolder(): the default is now to measure roughness for multiple frames rather than for the entire sound, thus returning a vector of roughness values over time (controlled by a new argument "amRes")
  * soundgen(): smoothing(list = ...) regulates interpolation of pitch and amplitude contours. Arguments "interpol", "discontThres", and "jumpThres" are thus deprecated (moved to "smoothing"), and an extra argument "loessSpan" is added to regulate the amount of smoothing
  * osc() replaces osc_db()

MINOR:
  * estimateVTL(): more advanced plotting, including Cook's distance as a measure of the influence of each formant frequency on apparent VTL
  * osc(), spectrogram(): fast plotting of long audio files
  * spectrogram() and all functions that call it (eg analyze, analyzeFolder, getLoudness): argument osc_dB is deprecated, use osc = 'dB' instead
  * analyze(): new arguments from/to to analyze only a part of sound, NAs not omitted when running custom summaryFun, median smoothing ignores NAs
  * analyze(), analyzeFolder(), segment(), segmentFolder(), getLoudnessFolder(), getRMSFolder(), modulationSpectrumFolder(): argument "summary" is deprecated and replaced with "summaryFun = NULL"